# novu-rust

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  rustfmt.toml  shell.nix  techstack.md  techstack.yml
.github/workflows/: dependencies.yml  linting.yml  testing.yml
examples/basic_run/: Cargo.toml
examples/basic_run/src/: main.rs
examples/trigger_single/: Cargo.toml
examples/trigger_single/src/: main.rs
src/: blueprint.rs  changes.rs  client.rs  environments.rs  error.rs  events.rs  feeds.rs  integrations.rs  layouts.rs  lib.rs  messages.rs  subscriber.rs  utils.rs  workflows.rs
