[package]
name = "novu"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.70"

[workspace]
members = ["examples/*"]
